<resources>
    <!-- Default -->
    <string name="app_name">GeekLocation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SignIn Fragment-->
    <string name="welcome_title">Добро пожаловать в GeekLocation </string>
    <string name="google_title">Google</string>
    <string name="logo">logo</string>
    <string name="hint_name">Имя</string>
    <string name="check_signup">Уже есть аккаунт?\t Войдите</string>

    <!-- Alert Dialog Main Fragment-->
    <string name="massage_need_permission_for_background">
        Для лучшей практики, включите отслеживать все время, чтобы другие пользователи
        могли видеть ваше местопложение на карте пока вы не используете приложение</string>
    <string name="negative_button_for_background">Нет Спасибо</string>

    <string name="title_no_network_and_GPS">Нет подключения к интернету и не включен GPS</string>
    <string name="massage_no_network_and_GPS">
        Пожалуйста, включите интернет и GPS, чтобы приложение работало корректно</string>

    <string name="title_no_network">Нет подключения к интернету</string>
    <string name="massage_no_network">Пожалуйста, проверьте подключене к интернету,
        потому что без него приложение не будет работать</string>

    <string name="title_no_GPS_enabled">GPS отключен</string>
    <string name="massage_no_GPS_enabled">Пожалуйста, включите GPS,
        чтобы приложение работало корректно</string>

    <string name="ok">ок</string>

    <!-- Other people marker -->
    <string name="other_person">other person</string>

    <!-- Toast text -->
    <string name="no_account">Такой аккаунт не был зарегистрирован</string>
    <string name="error">что-то пошло не так</string>
    <string name="permissions_denied">Для корректной работы нужны эти разрешения</string>
    <string name="settings">перейдите в настройки, чтобы дать разрешения на локацию</string>

</resources>