<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragments.signin.SignInFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/et_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/normal_edit_text"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/text_cursor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_google"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:autofillHints="name"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0"
        android:paddingVertical="8dp"
        android:text="@string/google_title"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconSize="40dp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/et_input_name" />

    <TextView
        android:id="@+id/tv_check_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/check_signup"
        android:textColor="@color/white"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

</androidx.constraintlayout.widget.ConstraintLayout>